{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 372,
  "lineage": "86ebb20d-7a43-7d39-91ed-679ccbc0a7bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:internet-gateway/igw-00dde53957a3f8c5e",
            "id": "igw-00dde53957a3f8c5e",
            "owner_id": "915147529294",
            "tags": {
              "Name": "ecs-igtw"
            },
            "tags_all": {
              "Name": "ecs-igtw"
            },
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:915147529294:loadbalancer/app/app-lb/2d38f1b2e1d59013",
            "arn_suffix": "app/app-lb/2d38f1b2e1d59013",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-936933789.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:915147529294:loadbalancer/app/app-lb/2d38f1b2e1d59013",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06c7dcc483277d1ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-031088cc14bbe349a"
              },
              {
                "subnet_id": "subnet-0b743929cb318906f"
              }
            ],
            "subnets": [
              "subnet-031088cc14bbe349a",
              "subnet-0b743929cb318906f"
            ],
            "vpc_id": "vpc-0c4bb56dedcbd2a1a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:915147529294:listener/app/app-lb/2d38f1b2e1d59013/f2ca69a7daeaab20",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:915147529294:targetgroup/tg-group/21c169bddc6d32d9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:915147529294:listener/app/app-lb/2d38f1b2e1d59013/f2ca69a7daeaab20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:915147529294:loadbalancer/app/app-lb/2d38f1b2e1d59013",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.tg-group",
            "aws_security_group.sg2",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:915147529294:targetgroup/tg-group/21c169bddc6d32d9",
            "arn_suffix": "targetgroup/tg-group/21c169bddc6d32d9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:915147529294:targetgroup/tg-group/21c169bddc6d32d9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-group",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00dde53957a3f8c5e",
            "id": "r-rtb-0ebbd757aab9b413c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ebbd757aab9b413c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.i-gateway",
            "aws_route_table.pub-table",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:route-table/rtb-0ebbd757aab9b413c",
            "id": "rtb-0ebbd757aab9b413c",
            "owner_id": "915147529294",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c272cfc21b53df86",
            "route_table_id": "rtb-0ebbd757aab9b413c",
            "subnet_id": "subnet-0b743929cb318906f"
          },
          "dependencies": [
            "aws_route_table.pub-table",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7448a9084a777f",
            "route_table_id": "rtb-0ebbd757aab9b413c",
            "subnet_id": "subnet-031088cc14bbe349a"
          },
          "dependencies": [
            "aws_route_table.pub-table",
            "aws_subnet.pub-subnets",
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:security-group/sg-043b952b960fff51d",
            "description": "Port 5000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043b952b960fff51d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "golang-server",
            "name_prefix": "",
            "owner_id": "915147529294",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:security-group/sg-06c7dcc483277d1ca",
            "description": "Port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outboun",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c7dcc483277d1ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "golang-server-alb",
            "name_prefix": "",
            "owner_id": "915147529294",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:subnet/subnet-0b743929cb318906f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "145.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b743929cb318906f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "915147529294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnets"
            },
            "tags_all": {
              "Name": "pub-subnets"
            },
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:subnet/subnet-031088cc14bbe349a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "145.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031088cc14bbe349a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "915147529294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnets"
            },
            "tags_all": {
              "Name": "pub-subnets"
            },
            "vpc_id": "vpc-0c4bb56dedcbd2a1a"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915147529294:vpc/vpc-0c4bb56dedcbd2a1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "145.0.0.0/16",
            "default_network_acl_id": "acl-09c9f46963ced0969",
            "default_route_table_id": "rtb-0cf4d6ddb61a25ec5",
            "default_security_group_id": "sg-0346b14a1b7841847",
            "dhcp_options_id": "dopt-0e085111c351aa6e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4bb56dedcbd2a1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf4d6ddb61a25ec5",
            "owner_id": "915147529294",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}